--- a/GlanceToDo/Base.lproj/Main.storyboard
+++ b/GlanceToDo/Base.lproj/Main.storyboard
@@ -59,9 +59,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nal-Ju-l0X">
-                                <rect key="frame" x="21" y="183" width="150" height="150"/>
-                                <color key="backgroundColor" red="0.0" green="0.50196081399917603" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nal-Ju-l0X">
+                                <rect key="frame" x="36" y="166" width="150" height="150"/>
+                                <color key="backgroundColor" red="0.7537681502525253" green="0.31193013168611428" blue="0.24469925151191094" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="Evr-hs-b74"/>
+                                    <constraint firstAttribute="width" constant="150" id="j83-XX-h7I"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="30"/>
                                 <state key="normal" title="Chores">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -70,26 +75,14 @@
                                     <segue destination="F9v-eh-SC7" kind="push" identifier="choresSegue" id="EnX-5T-Fuk"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fZU-Hq-s67">
-                                <rect key="frame" x="203" y="356" width="150" height="150"/>
-                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Social">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="F9v-eh-SC7" kind="push" identifier="socialSegue" id="aBA-Yb-D4L"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Category" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Y1-4J-Wzf">
-                                <rect key="frame" x="139" y="98" width="96" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VkX-7E-hGM">
-                                <rect key="frame" x="203" y="183" width="150" height="150"/>
-                                <color key="backgroundColor" red="1" green="0.37271593340027087" blue="0.81815248367350057" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VkX-7E-hGM">
+                                <rect key="frame" x="189" y="166" width="150" height="150"/>
+                                <color key="backgroundColor" red="0.4139752419589558" green="0.7537681502525253" blue="0.28846815136257831" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="Kxy-2q-ls8"/>
+                                    <constraint firstAttribute="width" constant="150" id="PvH-BY-82e"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="30"/>
                                 <state key="normal" title="Free Time">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -98,9 +91,14 @@
                                     <segue destination="F9v-eh-SC7" kind="push" identifier="freeTimeSegue" id="vNH-tc-BN1"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cga-f1-3Vo">
-                                <rect key="frame" x="21" y="356" width="150" height="150"/>
-                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cga-f1-3Vo">
+                                <rect key="frame" x="36" y="351" width="150" height="150"/>
+                                <color key="backgroundColor" red="0.1657086226363117" green="0.42340218269795221" blue="0.74124053030303028" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="BGn-0c-tfG"/>
+                                    <constraint firstAttribute="height" constant="150" id="iTx-1E-XzQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="30"/>
                                 <state key="normal" title="Work">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -109,10 +107,42 @@
                                     <segue destination="F9v-eh-SC7" kind="push" identifier="workSegue" id="aLd-3U-M1M"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fZU-Hq-s67">
+                                <rect key="frame" x="189" y="351" width="150" height="150"/>
+                                <color key="backgroundColor" red="1" green="0.35487066207829376" blue="0.64547446896874083" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="wO4-9f-vsc"/>
+                                    <constraint firstAttribute="width" constant="150" id="xvU-ia-gTs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="30"/>
+                                <state key="normal" title="Social">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="F9v-eh-SC7" kind="push" identifier="socialSegue" id="aBA-Yb-D4L"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Cga-f1-3Vo" firstAttribute="leading" secondItem="OLG-MX-S1R" secondAttribute="leadingMargin" constant="20" id="6bj-KR-wBq"/>
+                            <constraint firstItem="nal-Ju-l0X" firstAttribute="leading" secondItem="OLG-MX-S1R" secondAttribute="leadingMargin" constant="20" id="FdH-BG-xyr"/>
+                            <constraint firstItem="VkX-7E-hGM" firstAttribute="top" secondItem="OxS-bw-iQ2" secondAttribute="bottom" constant="102" id="IXz-nz-GNQ"/>
+                            <constraint firstItem="Cga-f1-3Vo" firstAttribute="top" secondItem="nal-Ju-l0X" secondAttribute="bottom" constant="35" id="cL0-Hf-idb"/>
+                            <constraint firstItem="nal-Ju-l0X" firstAttribute="top" secondItem="OxS-bw-iQ2" secondAttribute="bottom" constant="102" id="dI1-HA-viN"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="VkX-7E-hGM" secondAttribute="trailing" constant="20" id="eCh-ao-0QU"/>
+                            <constraint firstItem="fZU-Hq-s67" firstAttribute="top" secondItem="VkX-7E-hGM" secondAttribute="bottom" constant="35" id="jsT-zH-uCt"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fZU-Hq-s67" secondAttribute="trailing" constant="20" id="kyD-q7-4V8"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Add Task" id="d38-Ak-iZZ"/>
+                    <connections>
+                        <outlet property="choresButton" destination="nal-Ju-l0X" id="gQh-d5-YHa"/>
+                        <outlet property="freeTimeButton" destination="VkX-7E-hGM" id="sSf-RH-KyA"/>
+                        <outlet property="socialButton" destination="fZU-Hq-s67" id="mLh-HT-vr3"/>
+                        <outlet property="workButton" destination="Cga-f1-3Vo" id="EZB-FP-3hQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qHO-GN-NZV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
